syntax = "proto3";

package calendar;


service Calendar {
  rpc CreateNote (AddNoteRequest) returns (AddNoteResponse) {}

  rpc GetNote (GetNoteRequest) returns (GetNoteResponse) {}

  rpc GetUserNotes (GetUserNotesRequest) returns (GetUserNotesResponse) {}

  rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse) {}

  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}

  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

message Note {
  int64 note_id = 1;
  string text = 2;
  int64 user_id = 3;
  int64 date = 4;
}

message User {
  int64 user_id = 1;
  string user_name = 2;
}

message AddNoteRequest {
  string text = 1;
  int64 user_id = 2;
  int64 date = 3;
}

message AddNoteResponse {
  Note note = 1;
}

message GetNoteRequest {
  int64 note_id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message GetUserNotesRequest {
  int64 user_id = 1;
}

message GetUserNotesResponse {
  repeated Note notes = 1;
}

message DeleteNoteRequest {
  int64 note_id = 1;
}

message DeleteNoteResponse {}

message CreateUserRequest {
  string user_name = 1;
}

message CreateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {}

